Fix duplicate i18n keys and update locale (#735)

--- a/index.html
+++ b/index.html
@@ -472,19 +472,21 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-undo">
+                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-locate">
                                     Center current position (geolocation)
                                 </div>
                                 <div class="keyboard-shortcuts-key"><kbd>l</kbd></div>
                             </li>
                             <li>
-                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-undo">
+                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-search">
                                     Search for locations
                                 </div>
                                 <div class="keyboard-shortcuts-key"><kbd>f</kbd></div>
                             </li>
                             <li>
-                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-undo">Reverse route</div>
+                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-reverse">
+                                    Reverse route
+                                </div>
                                 <div class="keyboard-shortcuts-key"><kbd>r</kbd></div>
                             </li>
                             <li>
@@ -534,7 +536,7 @@
                                 <div class="keyboard-shortcuts-key"><kbd>x</kbd></div>
                             </li>
                             <li>
-                                <div class="keyboard-shortcuts-share" data-i18n="help.shortcut-share">Share route</div>
+                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-share">Share route</div>
                                 <div class="keyboard-shortcuts-key"><kbd>a</kbd></div>
                             </li>
                             <li>
@@ -586,7 +588,7 @@
                                 <div class="keyboard-shortcuts-key"><kbd>Shift</kbd> <kbd>click</kbd></div>
                             </li>
                             <li>
-                                <div class="keyboard-shortcuts-help" data-i18n="help.shortcut-help-dialog">
+                                <div class="keyboard-shortcuts-desc" data-i18n="help.shortcut-help-dialog">
                                     Open this help dialog
                                 </div>
                                 <div class="keyboard-shortcuts-key"><kbd>?</kbd></div>
