replace style attribute with proper class

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 
                         <div class="d-flex flex-column flex-lg-row">
                             <div class="mb-3 mb-lg-0 order-1 order-lg-0 mr-lg-5">
-                                <p id="share-qrcode-img" style="margin-right: 1em"></p>
+                                <p id="share-qrcode-img" class="mr-4"></p>
 
                                 <p
                                     class="alert alert-danger hide"
